@@ -8,8 +8,8 @@
 package org.opendaylight.aaa.web.testutils;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpRequest.BodyPublishers;
@@ -37,8 +37,8 @@ public class TestWebClient {
 
     public HttpResponse<String> request(final String httpMethod, final String path)
                 throws InterruptedException, IOException, URISyntaxException {
-        final URL url = new URL(baseUrl + (path.startsWith("/") ? path.substring(1) : path));
-        return webClient.send(HttpRequest.newBuilder(url.toURI()).method(httpMethod, BodyPublishers.noBody()).build(),
+        final var url = new URI(baseUrl + (path.startsWith("/") ? path.substring(1) : path));
+        return webClient.send(HttpRequest.newBuilder(url).method(httpMethod, BodyPublishers.noBody()).build(),
             BodyHandlers.ofString());
     }
 }
